--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "deploy": "gh-pages -d docs"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "firebase": "^9.15.0",
+    "firebase-functions": "^6.3.2",
+    "fluent-ffmpeg": "^2.1.3",
     "live-server": "^1.2.0"
   },
   "devDependencies": {
