--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,9 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "type": "module",
   "scripts": {
+    "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -13,19 +15,17 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/storage": "^6.9.2",
-    "firebase-admin": "^11.11.0",
-    "firebase-functions": "^4.7.0",
-    "fluent-ffmpeg": "^2.1.2"
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^5.0.0",
+    "fluent-ffmpeg": "^2.1.3"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.1.0"
   },
-  "private": true,
-  "scripts": {
-    "lint": "echo \"No linting configured\""
-  }
+  "private": true
 }
