--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^9.15.0",
     "firebase-functions": "^6.3.2",
     "fluent-ffmpeg": "^2.1.3",
-    "live-server": "^1.2.0"
+    "live-server": "^1.2.0",
+    "openai": "^4.103.0"
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
