--- a/functions/package.json
+++ b/functions/package.json
@@ -15,14 +15,17 @@
   },
   "main": "index.js",
   "dependencies": {
-    "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "@google-cloud/storage": "^6.9.2",
+    "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^5.0.0",
-    "fluent-ffmpeg": "^2.1.3"
+    "fluent-ffmpeg": "^2.1.3",
+    "openai": "^4.103.0"
   },
   "devDependencies": {
+    "dotenv": "^16.5.0",
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.1.0"
