--- a/functions/package.json
+++ b/functions/package.json
@@ -19,13 +19,14 @@
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@google-cloud/storage": "^6.9.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^5.0.0",
+    "firebase-functions": "^6.3.2",
     "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.103.0"
   },
   "devDependencies": {
-    "dotenv": "^16.5.0",
+    "@types/cors": "^2.8.18",
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.1.0"
